Implémentation des images aléatoires dans l'exercice 2